fix:view more align on left and change all informations to real information

--- a/src/app/components/public/footer/footer.component.scss
+++ b/src/app/components/public/footer/footer.component.scss
@@ -42,7 +42,7 @@
     background-repeat:no-repeat;
     border: 2px solid white; 
     color: white;
-    margin: 15px auto ;
+    margin: 10px 10px ;
 
     width: 50%;
 }
